// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkListItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="bpk-list__item"
  >
    List item
  </li>
</DocumentFragment>
`;

exports[`BpkListItem should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <li
    class="bpk-list__item test-list-item"
  >
    List item
  </li>
</DocumentFragment>
`;
